# seismicFlow

./: .gitignore  README.md  extract_surfaces.py  flow_utils.py  generate_surfaces_2D.py  pyproject.toml  segment_flowlines.py
seismicFlow2-5D_GPU/: seismicFlow2_5D_interactive.py
seismicFlow2-5D_Plus/: generate_qc_plots.py  seismicFlow2_5D_Plus_interactive.py
seismicFlow2D/: seismicFlow2D_interactive.py
seismicFlow2D_GPU/: seismicFlow2D_interactive_GPU_V1.py  seismicFlow2D_interactive_GPU_V2.py  seismicFlow2D_interactive_GPU_V3.py
seismicFlow3D/: seismicFlow3D_interactive.py
