[project]
name = "seismicflow"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.2.0",
    "cupy-cuda12x>=13.6.0",
    "cycler==0.12.1",
    "fonttools==4.48.1",
    "joblib==1.3.2",
    "kiwisolver==1.4.5",
    "matplotlib==3.8.2",
    "numpy==1.26.4",
    "packaging==23.2",
    "pillow==10.2.0",
    "pyparsing==3.1.1",
    "python-dateutil==2.8.2",
    "scikit-learn==1.4.1.post1",
    "scipy==1.12.0",
    "setuptools==68.2.2",
    "shapely==2.0.3",
    "six==1.16.0",
    "structure-tensor==0.2.1",
    "threadpoolctl==3.3.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "wheel==0.41.2",
]
